--- a/microservices-saga-choreography/order-service/src/main/resources/application.properties
+++ b/microservices-saga-choreography/order-service/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-spring.application.name=order-service
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url = jdbc:mysql://localhost:3306/javatechie
+spring.datasource.username = maveldev
+spring.datasource.password = mavelpass
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.format_sql=true
