Intial commits complement

--- a/multi-module-microservice/settings.gradle
+++ b/multi-module-microservice/settings.gradle
@@ -3,3 +3,4 @@ rootProject.name = 'multi-module-microservice'
 include 'commons'
 include 'order-service'
 include 'payment-service'
+include 'product-service'
